Fix responsive topnav and continue in linear function

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,21 +1,19 @@
 <div class="topnav" id="myTopnav">
   <a href="/index.html" class="active">Mathematikos</a>
   <div class="dropdown">
-    <button class="dropbtn">Algebra 
-      <i class="fa fa-caret-down"></i>
-    </button>
+    <button class="dropbtn">Algebra</button>
     <div class="dropdown-content">
       <a href="/pages/linear_function.html">Lineárna funkcia</a>
       <a href="#">Kvadratická funkcia</a>
       <a href="#">Exponenciálna funkcia</a>
-    </div>
-  </div> 
+    </div> <!--end of dropdown content-->
+  </div> <!--end of dropdown-->
 
   <a href="#contact">Geometria</a>
   <a href="#about">Analytická geometria</a>
   <a href="#about">Pravdepodobnosť a štatistika</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-    <img src='assets/images/hamburgerIcon.png' style='width: 10%; height: 10%'>
+	<i class="fa fa-bars"></i>
   </a>
 </div>
 
