--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,16 @@
 <link rel="stylesheet" type="text/css" href="/assets/css/nav_styles.css">
 <link rel="stylesheet" type="text/css" href="/assets/css/carusel_styles.css">
 <link rel="stylesheet" type="text/css" href="/assets/css/styles.css">
+
+
+<!-- include library for icons -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<!-- include library for display math equations -->
+ <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+  <script id="MathJax-script" async
+          src="https://cdn.jsdelivr.net/npm/mathjax@3.0.1/es5/tex-mml-chtml.js">
+  </script>
 <title>{{ page.title }}</title>
 </head>
 <body>
