--- a/assets/css/nav_styles.css
+++ b/assets/css/nav_styles.css
@@ -47,9 +47,11 @@ body {
 
 @media screen and (max-width: 600px) {
   .topnav a:not(:first-child) {display: none;}
+  .topnav .dropdown {display: none;}
   .topnav a.icon {
     float: right;
     display: block;
+	font-size: 120%;
   }
 }
 
@@ -60,7 +62,13 @@ body {
     right: 0;
     top: 0;
   }
-  .topnav.responsive a {
+  .topnav.responsive a{
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  
+  .topnav.responsive .dropdown{
     float: none;
     display: block;
     text-align: left;
