--- a/assets/css/carusel_styles.css
+++ b/assets/css/carusel_styles.css
@@ -1,13 +1,20 @@
 * {box-sizing: border-box;}
 .mySlides {display: none;}
-/*img {vertical-align: middle;}*/
+
+.slideshow-container img {
+	max-width: 100%;
+	height: 82vh; /*tu som to nasla: https://stackoverflow.com/questions/11516291/css-get-height-of-screen-resolution*/
+	overflow: hidden;
+}
 
 /* Slideshow container */
 .slideshow-container {
   max-width: 100%;
-  max-width: 65%;
+  max-height: 30%;
   position: relative;
   margin: auto;
+  margin-top: 0.5%;
+  text-align: center;
 }
 
 /* Caption text */
