Add vocabulary page and fix errors in linear function

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -4,14 +4,14 @@
     <button class="dropbtn">Algebra</button>
     <div class="dropdown-content">
       <a href="/pages/linear_function.html">Lineárna funkcia</a>
-      <a href="#">Kvadratická funkcia</a>
-      <a href="#">Exponenciálna funkcia</a>
+      <!--a href="#">Exponenciálna funkcia</a-->
     </div> <!--end of dropdown content-->
   </div> <!--end of dropdown-->
 
   <a href="#contact">Geometria</a>
   <a href="#about">Analytická geometria</a>
   <a href="#about">Pravdepodobnosť a štatistika</a>
+  <a href="/pages/vocabulary.html">Slovník</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
 	<i class="fa fa-bars"></i>
   </a>
