Fix img width on responsive design and add number systems article

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,9 +1,18 @@
 <div class="topnav" id="myTopnav">
   <a href="/index.html" class="active">Mathematikos</a>
+  
+  <div class="dropdown">
+    <button class="dropbtn">Čísla</button>
+    <div class="dropdown-content">
+      <a href="/pages/howNumbersWereBorn.html">Ako vznikli čísla</a>
+      <!--a href="#">Exponenciálna funkcia</a-->
+    </div> <!--end of dropdown content-->
+  </div> <!--end of dropdown-->
+  
   <div class="dropdown">
     <button class="dropbtn">Algebra</button>
     <div class="dropdown-content">
-      <a href="/pages/linear_function.html">Lineárna funkcia</a>
+      <a href="/pages/linearFunction.html">Lineárna funkcia</a>
       <!--a href="#">Exponenciálna funkcia</a-->
     </div> <!--end of dropdown content-->
   </div> <!--end of dropdown-->
