--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<!--meta charset={{ page.charset | default: 'ASCII'}} Liquid variable jekyll -->
 <link rel="stylesheet" type="text/css" href="/assets/css/nav_styles.css">
 <link rel="stylesheet" type="text/css" href="/assets/css/carusel_styles.css">
 <link rel="stylesheet" type="text/css" href="/assets/css/styles.css">
