--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -5,6 +5,7 @@
     <button class="dropbtn">Čísla</button>
     <div class="dropdown-content">
       <a href="/pages/howNumbersWereBorn.html">Ako vznikli čísla</a>
+	  <a href="/pages/numberSystems.html">Číselné sústavy</a>
       <!--a href="#">Exponenciálna funkcia</a-->
     </div> <!--end of dropdown content-->
   </div> <!--end of dropdown-->
