--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -15,6 +15,13 @@ h1 {
 	font-size: 400%;
 }
 
+h2 {
+	text-align: center;
+	font-family: var(--primaryFont);
+	text-transform: uppercase;
+	font-size: 300%;
+}
+
 .content{
 	text-align: justify;
 	font-family: Verdana;
