Add statistics. Fix page titles

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -18,10 +18,17 @@
       <!--a href="#">Exponenciálna funkcia</a-->
     </div> <!--end of dropdown content-->
   </div> <!--end of dropdown-->
+  
+  <div class="dropdown">
+    <button class="dropbtn">Pravdepodobnosť a štatistika</button>
+    <div class="dropdown-content">
+      <a href="/pages/statistics.html">Štatistika</a>
+      <!--a href="#">Exponenciálna funkcia</a-->
+    </div> <!--end of dropdown content-->
+  </div> <!--end of dropdown-->
 
-  <a href="#contact">Geometria</a>
-  <a href="#about">Analytická geometria</a>
-  <a href="#about">Pravdepodobnosť a štatistika</a>
+  <!--a href="#contact">Geometria</a>
+  <a href="#about">Analytická geometria</a-->
   <a href="/pages/vocabulary.html">Slovník</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
 	<i class="fa fa-bars"></i>
