Analytic geometry: history, usage, space, coor sys, vectors

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -20,15 +20,28 @@
   </div> <!--end of dropdown-->
   
   <div class="dropdown">
-    <button class="dropbtn">Pravdepodobnosť a štatistika</button>
+    <button class="dropbtn">Štatistika</button>
     <div class="dropdown-content">
-      <a href="/pages/statistics.html">Štatistika</a>
+      <a href="/pages/stat_intro.html">Úvod do štatistiky</a>
+	  <a href="/pages/stat_data.html">Údaje</a>
+      <!--a href="#">Exponenciálna funkcia</a-->
+    </div> <!--end of dropdown content-->
+  </div> <!--end of dropdown-->
+  
+  <div class="dropdown">
+    <button class="dropbtn">Analytická geometria</button>
+    <div class="dropdown-content">
+      <a href="/pages/aGeom_history.html">Vznik analytickej geometrie</a>
+	  <a href="/pages/aGeom_usage.html">Využitie analytickej geometrie</a>
+	  <a href="/pages/aGeom_space.html">Priestor</a>
+	  <a href="/pages/aGeom_coorSys.html">Súradnicová sústava</a>
+	  <a href="/pages/aGeom_vectors.html">Vektory</a>
+	  <a href="/pages/aGeom_usageCG.html">Konkrétny príklad použitia AG</a>
       <!--a href="#">Exponenciálna funkcia</a-->
     </div> <!--end of dropdown content-->
   </div> <!--end of dropdown-->
 
-  <!--a href="#contact">Geometria</a>
-  <a href="#about">Analytická geometria</a-->
+  <!--a href="#contact">Geometria</a-->
   <a href="/pages/vocabulary.html">Slovník</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
 	<i class="fa fa-bars"></i>
