--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -34,6 +34,12 @@ h3 {
   margin-right: auto;
 }
 
+.extendingText, .extendingText h2{
+	color: #707070;
+}
+
+
+
 .literature {
 	overflow-wrap: break-word;
 }
