Fixed links in navigation

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -5,7 +5,7 @@
     <button class="dropbtn">Čísla</button>
     <div class="dropdown-content">
       <a href="/pages/howNumbersWereBorn.html">Ako vznikli čísla</a>
-	  <a href="/pages/numbers.html">Čísla</a>
+	  <!--a href="/pages/numbers.html">Číselné množiny</a-->
 	  <a href="/pages/numberSystems.html">Číselné sústavy</a>
       <!--a href="#">Exponenciálna funkcia</a-->
     </div> <!--end of dropdown content-->
@@ -22,9 +22,7 @@
   <div class="dropdown">
     <button class="dropbtn">Štatistika</button>
     <div class="dropdown-content">
-      <a href="/pages/stat_intro.html">Úvod do štatistiky</a>
-	  <a href="/pages/stat_data.html">Údaje</a>
-      <!--a href="#">Exponenciálna funkcia</a-->
+      <a href="/pages/statistics.html">Štatistika</a>
     </div> <!--end of dropdown content-->
   </div> <!--end of dropdown-->
   
@@ -36,8 +34,7 @@
 	  <a href="/pages/aGeom_space.html">Priestor</a>
 	  <a href="/pages/aGeom_coorSys.html">Súradnicová sústava</a>
 	  <a href="/pages/aGeom_vectors.html">Vektory</a>
-	  <a href="/pages/aGeom_usageCG.html">Konkrétny príklad použitia AG</a>
-      <!--a href="#">Exponenciálna funkcia</a-->
+	  <!--a href="/pages/aGeom_usageCG.html">Konkrétny príklad použitia AG</a-->
     </div> <!--end of dropdown content-->
   </div> <!--end of dropdown-->
 
