--- a/assets/css/carusel_styles.css
+++ b/assets/css/carusel_styles.css
@@ -1,5 +1,7 @@
 * {box-sizing: border-box;}
-.mySlides {display: none;}
+.mySlides {
+	display: none;
+}
 
 .slideshow-container img {
 	max-width: 100%;
@@ -9,12 +11,14 @@
 
 /* Slideshow container */
 .slideshow-container {
-  max-width: 100%;
-  max-height: 30%;
+  max-width: 50%;
+  max-height: auto;
   position: relative;
   margin: auto;
   margin-top: 0.5%;
-  text-align: center;
+  padding-left: 10%;
+  text-align: right;
+  float: left;
 }
 
 /* Caption text */
@@ -71,6 +75,14 @@
 }
 
 /* On smaller screens, decrease text size */
-@media only screen and (max-width: 300px) {
+@media screen and (max-width: 600px) {
   .text {font-size: 11px}
+  
+/* Slideshow container */
+.slideshow-container {
+  max-width: 100%;
+  float: none;
+  padding: 0;
+}
+
 }
