--- a/assets/css/zeynep/base.css
+++ b/assets/css/zeynep/base.css
@@ -54,20 +54,21 @@ main {
 
 
 .btn-open {
-  width: 40px; 
-  height: 40px;
+  width: 50px; 
+  height: 50px;
   border: 0;
-  border-radius: 10px;
+  border-radius: 2px;
   /*box-shadow: 0 2px 14px 0 rgba(0, 0, 0, .05);*/
   display: inline-block;
   font-size: 16px;
   font-weight: bold;
-  min-width: 70px;
   outline: 0;
-  padding-bottom: 15px;
-  padding-top: 15px;
   cursor: pointer;
   margin: 0 6px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
 }
 .btn-open:active {
   box-shadow: inset 0 3px 5px 0px rgba(0, 0, 0, .1);
