Add Instagram icon

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -4,6 +4,10 @@
 <link href="/assets/css/zeynep/left.css" rel="stylesheet"/>
 
 <div class="navbar">
+  <div style="top: 0; position: fixed; height: 50px; width: 100%;">
+    <a href="https://www.instagram.com/mathematikos_sk/" target="_blank"><img src="../assets/images/homepage/Instagram_Glyph_Black.png" alt="Instagram" style="max-height:80%; max-width:100%; float: right; margin: 5px 6px;"></a>
+	<!--<p style="text-align:center;"><a href="https://www.instagram.com/mathematikos_sk/" style="float: right; margin: 0 6px;">Visit Instagram</a></p>-->
+  </div>
   <button type="button" class="btn-open first" aria-label="menu">
 	<img src="../assets/images/homepage/menu.png" alt="menu">
   </button>
