--- a/assets/css/zeynep/base.css
+++ b/assets/css/zeynep/base.css
@@ -43,18 +43,18 @@ main {
 }
 
 .navbar {
-	width:100%;
+	width: 100%;
 }
 
 .navbar .btn-open img{
 	width: 40px; 
 	height: 40px;
-	float:rigt;
+	float: right;
 }
 
 
 .btn-open {
-  width: 50px; 
+  width: 50px;
   height: 50px;
   border: 0;
   border-radius: 2px;
