Improve SEO with seo-tag and sitemap plugins

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="{{ page.description | default: page.title }}">
+<!--<meta name="description" content="{{ page.description | default: page.title }}">-->
 <meta name="keywords" content="{{ page.keywords }}">
-<meta name="author" content="{{ site.author }}">
+<!--<meta name="author" content="{{ site.author }}">-->
 
 <title>{{ page.title }}</title>
 
@@ -13,6 +13,8 @@
 {% for style in styles %}
 <link rel="stylesheet" type="text/css" href="/assets/css/{{ style }}.css">
 {%- endfor %}
+
+{% seo title=false %}
 
 <!-- include library for display math equations -->
 <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
