Add footer with contact info

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,5 +33,17 @@ MathJax = {
 {% include navigation.html %}
 
 {{ content }}
+
+<footer>
+
+<div>
+Ahoj náš milý čitateľ!<br /> <br />
+Sme radi, že sa ti páči naša stránka a boli by sme radi, ak by sa ti páčila ešte viac.
+Preto nám <b>prosím napíš</b>, čo sa ti na stránke páčilo/nepáčilo alebo čo by sme tam mali doplniť.
+Môžeš tak urobiť prostredníctvom <b><a href="https://forms.gle/RkKkeaZHCgeWXSVUA" target="_blank" style="color: white">google formulára</a></b> alebo cez náš e-mail <b><a href="mailto:{{ site.email }}" style="color: white">{{ site.email }}</a></b>.<br /> <br />
+
+Ďakujeme a prajeme ti pekný deň :)
+</div>
+</footer>
 </body>
 </html>
