--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -62,6 +62,20 @@ h3 {
 	font-size: 200%;
 }
 
+footer{
+	text-align: center;
+	font-family: var(--primaryFont);
+	background-color: var(--quaternary);
+	color: white;
+	padding: 15%;
+	font-size: 200%;
+}
+
+footer div{
+	text-align: justify;
+
+}
+
 .center {
   margin-left: auto;
   margin-right: auto;
