Fix content wider than screen

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -85,7 +85,7 @@ footer{
 
 footer div{
 	text-align: justify;
-
+	overflow-wrap: break-word;
 }
 
 .center {
@@ -143,12 +143,15 @@ footer div{
 }
 
 .vocabEntry div{
-	
 	margin-left: 20%;
 }
 
+.overflowedItem{ /* items which are too wide and overflow, e.g. math expressions, tables */
+	overflow-x: auto;
+}
+
 .statTable td,th{
-	padding-right: 3%;
+	padding-right: 8px;
 }
 
 .history_container {
